--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -29,6 +29,12 @@
   margin-top: 20px;
 }
 
+#map {
+  border: thin solid black;
+  height: 500px;
+  width: 500px;
+}
+
 .intro-image{
   background: url(eva-images/queens.jpg) no-repeat center; 
   background-size: cover;
